[package]
name = "dclone-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
argh = "0.1.7"
libnotify = "1.0.3"
log = "0.4.16"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
simple_logger = { version = "2.1.0", features = ["stderr"] }
tokio = { version = "1.18.0", features = ["rt", "time", "macros", "signal"] }
